objects/LAT_ProdInventory__c.object
<CustomObject>
    <fields>
        <fullName>AmountLeft__c</fullName>
        <label>Qtde Inventario</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qtde Atual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventario_POP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventario POP</label>
        <referenceTo>LAT_InventoryPOP__c</referenceTo>
        <relationshipLabel>Coleta Inventario</relationshipLabel>
        <relationshipName>Produtos_Inventario</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material POP</label>
        <referenceTo>LAT_Produto_POP__c</referenceTo>
        <relationshipLabel>Produtos Inventario</relationshipLabel>
        <relationshipName>Produtos_Inventario</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comentario</label>
        <type>TextArea</type>
    </fields>
    <label>Produto Inventario</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Produto Inventario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Inventario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>